ZGC does not support compressed oops.